Ensure left alignment consistency of stream info in task view

--- a/src/moombox/static/moombox.css
+++ b/src/moombox/static/moombox.css
@@ -52,6 +52,9 @@ a {
     padding: var(--sl-spacing-small);
   }
 }
+.stream-info {
+  width: 100%;
+}
 #video-table-header, .video-item {
   gap: var(--sl-spacing-x-small);
 }
